// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<div
  tabindex="-1"
  aria-labelledby="_r_0_"
>
  <h2 id="_r_0_">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Fødselsdato kan ikke være etter år 2005
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#"
      >
        E-post må være gyldig
      </a>
    </li>
  </ul>
</div>
`;

exports[`Show Hide 1`] = `
<button
  data-variant="primary"
  type="button"
>
  Skjul feilmelding
</button>
<div
  tabindex="-1"
  aria-labelledby="_r_2_"
>
  <h2 id="_r_2_">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</div>
`;

exports[`With Form 1`] = `
<div>
  <label
    data-weight="medium"
    for="fornavn"
  >
    Fornavn
  </label>
  <div>
    <input
      aria-invalid="true"
      id="fornavn"
      type="text"
      aria-describedby="fornavn:validation:1"
    >
  </div>
  <p
    data-field="validation"
    id="fornavn:validation:1"
  >
    Fornavn må være minst 2 tegn
  </p>
</div>
<div>
  <label
    data-weight="medium"
    for="telefon"
  >
    Telefon
  </label>
  <div>
    <input
      aria-invalid="true"
      id="telefon"
      type="tel"
      aria-describedby="telefon:validation:1"
    >
  </div>
  <p
    data-field="validation"
    id="telefon:validation:1"
  >
    Telefonnummer kan kun inneholde siffer
  </p>
</div>
<div
  tabindex="-1"
  aria-labelledby="_r_1_"
>
  <h2 id="_r_1_">
    For å gå videre må du rette opp følgende feil:
  </h2>
  <ul>
    <li>
      <a
        data-color="neutral"
        href="#fornavn"
      >
        Fornavn må være minst 2 tegn
      </a>
    </li>
    <li>
      <a
        data-color="neutral"
        href="#telefon"
      >
        Telefonnummer kan kun inneholde siffer
      </a>
    </li>
  </ul>
</div>
`;
